# ylva_and_malin

./: .gitignore  CREDITS.md  README.md  asset_links.txt  imgui.ini  notes.md  plans.md  plans.txt  tutorials.txt  ym_release_capture.cap
doc/doxygen/: ym_doxyfile
docs/: index.html  memory_map.ods
docs/doxygen/: ym_doxyfile
docs/doxygen/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  allocator__tests_8c.html  allocator__tests_8c__incl.map  allocator__tests_8c__incl.md5  allocator__tests_8c_a05a25aa1e9ab8045316f6ae4204fb5a2_cgraph.map  allocator__tests_8c_a05a25aa1e9ab8045316f6ae4204fb5a2_cgraph.md5  allocator__tests_8c_a05a25aa1e9ab8045316f6ae4204fb5a2_icgraph.map  allocator__tests_8c_a05a25aa1e9ab8045316f6ae4204fb5a2_icgraph.md5  allocator__tests_8c_a1061bc33a35875c6140cabbcdbbc1f3d_cgraph.map  allocator__tests_8c_a1061bc33a35875c6140cabbcdbbc1f3d_cgraph.md5  allocator__tests_8c_a1061bc33a35875c6140cabbcdbbc1f3d_icgraph.map  allocator__tests_8c_a1061bc33a35875c6140cabbcdbbc1f3d_icgraph.md5  allocator__tests_8c_a11b0640b05a4e7973930f6ecfe16a082_cgraph.map  allocator__tests_8c_a11b0640b05a4e7973930f6ecfe16a082_cgraph.md5  allocator__tests_8c_a11b0640b05a4e7973930f6ecfe16a082_icgraph.map  allocator__tests_8c_a11b0640b05a4e7973930f6ecfe16a082_icgraph.md5  allocator__tests_8c_a30791ed44f8d6459b6cfd0aee3a740e6_icgraph.map  allocator__tests_8c_a30791ed44f8d6459b6cfd0aee3a740e6_icgraph.md5  allocator__tests_8c_a34f4cd635ce65b6bf58202fb3d54190b_icgraph.map  allocator__tests_8c_a34f4cd635ce65b6bf58202fb3d54190b_icgraph.md5  allocator__tests_8c_a5f21abed917e26a9ba0cf3daf4ab4d70_cgraph.map  allocator__tests_8c_a5f21abed917e26a9ba0cf3daf4ab4d70_cgraph.md5  allocator__tests_8c_a5f21abed917e26a9ba0cf3daf4ab4d70_icgraph.map  allocator__tests_8c_a5f21abed917e26a9ba0cf3daf4ab4d70_icgraph.md5  allocator__tests_8c_a830b207ff59ce5fe33e4360821ca3767_cgraph.map  allocator__tests_8c_a830b207ff59ce5fe33e4360821ca3767_cgraph.md5  allocator__tests_8c_a830b207ff59ce5fe33e4360821ca3767_icgraph.map  allocator__tests_8c_a830b207ff59ce5fe33e4360821ca3767_icgraph.md5  allocator__tests_8c_a88a69f3f7d34c89a0e894b2576691487_cgraph.map  allocator__tests_8c_a88a69f3f7d34c89a0e894b2576691487_cgraph.md5  allocator__tests_8c_a88a69f3f7d34c89a0e894b2576691487_icgraph.map  allocator__tests_8c_a88a69f3f7d34c89a0e894b2576691487_icgraph.md5  allocator__tests_8c_a971be7f566458c26fb4866e6292d9614_cgraph.map  allocator__tests_8c_a971be7f566458c26fb4866e6292d9614_cgraph.md5  allocator__tests_8c_a971be7f566458c26fb4866e6292d9614_icgraph.map  allocator__tests_8c_a971be7f566458c26fb4866e6292d9614_icgraph.md5  allocator__tests_8c_ab4d47ebd3e19150a6c615756b9738eed_cgraph.map  allocator__tests_8c_ab4d47ebd3e19150a6c615756b9738eed_cgraph.md5  (+4224 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_14.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_e.js  classes_f.js  (+125 more)
editor/: CMakeLists.txt  README.md
editor/src/: CMakeLists.txt  logger.h  main.cpp  texture.cpp  texture.h
game/src/: CMakeLists.txt
game/src/ym/: CMakeLists.txt
game/src/ym/container/test/: CMakeLists.txt
game/src/ym/core/: CMakeLists.txt  ym_assert.h  ym_atomic.h  ym_attributes.h  ym_core.h  ym_error.h  ym_log.h  ym_time.h  ym_types.h
game/src/ym/graphics/: ym_gfx_doc.h  ym_gfx_gl.c  ym_gfx_sprite.h  ym_gfx_win.c
game/src/ym/memory/: ym_allocator.c
game/src/ym/memory/test/: CMakeLists.txt  allocator_tests.c
game/src/ym/resource/: ym_resource.c  ym_resource.h
game/src/ym/telemetry/: ym_telemetry.c  ym_telemetry.h  ym_telemetry_doc.h
game/src/ym/test/: main.c  ym_test.h
meta_generator/: CMakeLists.txt  README.md
meta_generator/src/: CMakeLists.txt  main.cpp  meta.cpp  meta.h
meta_generator/tests/: CMakeLists.txt  catch.hpp  tests.cpp
resources/maps/: testing.map  testing.tmx
resources/shaders/: simple_shader.frag  simple_shader.vert
scripts/: min.suppressions  ym_compile.sh  ym_doxygen.sh  ym_line_count.sh  ym_valgrind.sh
setup/: ym_setup.sh
src/: CMakeLists.txt  main.c  main.cpp
src/ym/: CMakeLists.txt
src/ym/atomic/: ym_atomic.h
src/ym/container/: CMakeLists.txt  ym_array.h
src/ym/core/: CMakeLists.txt  ym_assert.h  ym_atomic.h  ym_attributes.h  ym_core.h  ym_core_doc.h  ym_error.c  ym_error.h  ym_log.c  ym_log.h  ym_macros.h  ym_math.h  ym_time.h  ym_types.h  ym_warnings.h
src/ym/graphics/: CMakeLists.txt  glext.h  wglext.h  ym_gfx.c  ym_gfx.h  ym_gfx_gl.c  ym_gfx_gl.h  ym_gfx_gl_init.c  ym_gfx_gl_procs.c  ym_gfx_gl_procs.h  ym_gfx_gl_win.c  ym_gfx_gl_win.h  ym_gfx_sprite.c  ym_gfx_sprite.h  ym_gfx_unix.c  ym_gfx_win.c
src/ym/memory/: CMakeLists.txt  ym_allocator.c  ym_allocator.h  ym_memory.c  ym_memory.h  ym_memory_regions.h
src/ym/memory/test/: allocator_tests.c
src/ym/memory/tests/: memory_tests.cpp
src/ym/resource/: CMakeLists.txt
src/ym/std/: CMakeLists.txt
src/ym/std/algorithm/: ym_algorithm.h
src/ym/std/container/fixed_vector/: ym_fixed_vector.h  ym_fixed_vector.tpp
src/ym/std/memory/: ym_memory.h
src/ym/std/memory/algorithm/: ym_construct.h  ym_destruct.h
src/ym/std/memory/heap_allocator/: ym_heap_allocator.h  ym_heap_allocator.ipp
src/ym/std/memory/stack_frame_allocator/: ym_stack_frame_allocator.h  ym_stack_frame_allocator.ipp
src/ym/std/tests/: std_tests.cpp
src/ym/std/tests/container/: fixed_vector_test.cpp
src/ym/std/tests/memory/: heap_allocator_test.cpp  stack_frame_allocator_test.cpp
src/ym/std/types/: ym_types.h
src/ym/telemetry/: CMakeLists.txt  ym_telemetry.c
src/ym/test/: CMakeLists.txt  main.c  ym_test.h
src/ym/thread/: CMakeLists.txt  ym_thread.h  ym_thread_win.c
